--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
     <![endif]-->
     
-  site.title='Pierre Baduel'
+  site.title="Pierre Baduel";
   </head>
   <body>
     <div class="wrapper">
