--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,4 +1,8 @@
 <!DOCTYPE html>
+<script>
+  site.title="Pierre Baduel";
+ </script>
+
 <html lang="{{ site.lang | default: "en-US" }}">
   <head>
     <meta charset="UTF-8">
@@ -11,7 +15,6 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
     <![endif]-->
     
-  site.title="Pierre Baduel";
   </head>
   <body>
     <div class="wrapper">
