--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 
+---
+title: Pierre Baduel
+---
+
 <html lang="{{ site.lang | default: "en-US" }}">
   <head>
     <meta charset="UTF-8">
@@ -16,7 +20,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1><a href="{{ "/" | absolute_url }}">{{ "Pierre Baduel" | default: site.github.repository_name }}</a></h1>
+        <h1><a href="{{ "/" | absolute_url }}">{{  | default: site.github.repository_name }}</a></h1>
         
         {% if site.logo %}
           <img src="{{site.logo | relative_url}}" alt="Logo" />
