--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,7 +43,8 @@
       </header>
       <section>
 
-      {{ content }}
+      <h2><a href="{{ "/" | absolute_url }}">{{ about.md }}</a></h2>
+      <h2><a href="{{ "/" | absolute_url }}">{{ publications.md }}</a></h2>
 
       </section>
       <footer>
