--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,6 +25,9 @@
 
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
+        <h2><a href="{{ "/about.md"}}">{{ about }}</a></h2>
+        <h2><a href="{{ "/publications.md" }}">{{ publications }}</a></h2>
+        
         {% if site.github.is_project_page %}
         <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
         {% endif %}
@@ -43,8 +46,7 @@
       </header>
       <section>
 
-      <h2><a href="{{ "/about.md"}}">{{ about }}</a></h2>
-      <h2><a href="{{ "/publications.md" }}">{{ publications }}</a></h2>
+        {{ content }}
 
       </section>
       <footer>
