--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,8 +25,10 @@
 
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
-        <p><a href="{{ "/" | absolute_url | append: "about"}}">about</a></p>
-        <p><a href="{{ "/" | absolute_url | append: "publications" }}">publications</a></p>
+        <p><a href="{{ "/" | absolute_url | append: "about"}}">About</a></p>
+        <p><a href="{{ "/" | absolute_url | append: "research"}}">Research</a></p>
+        <p><a href="{{ "/" | absolute_url | append: "code"}}">Code</a></p>
+        <p><a href="{{ "/" | absolute_url | append: "publications" }}">Publications</a></p>
         
         {% if site.github.is_project_page %}
         <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
