--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
         <p><a href="{{ "/" | absolute_url | append: "research"}}">Research</a></p>
         <p><a href="{{ "/" | absolute_url | append: "publications" }}">Publications</a></p>
         <p><a href="{{ "/" | absolute_url | append: "code"}}">Code</a></p>
-        <p><img src="{{Researcher.png | relative_url}}" width="10" height="10" alt="About" /><a href="{{ "/" | absolute_url | append: "about"}}">About</a></p>
+        <p><img src="{{/images/Researcher.png | relative_url}}" width="10" height="10" alt="About" /><a href="{{ "/" | absolute_url | append: "about"}}">About</a></p>
 
         {% if site.show_downloads %}
         <ul class="downloads">
