--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
 
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
-        <p><a href="{{ "/" | absolute_url | append: "research"}}">Research</a></p>
+        <p><img src="/images/logo-research.png" width="10" alt="" /> <a href="{{ "/" | absolute_url | append: "research"}}">Research</a></p>
         <p><a href="{{ "/" | absolute_url | append: "publications" }}">Publications</a></p>
         <p><a href="{{ "/" | absolute_url | append: "code"}}">Code</a></p>
         <p><img src="/images/Researcher.png" width="10" alt="" /> <a href="{{ "/" | absolute_url | append: "about"}}">About</a></p>
