--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
 
         <p><img src="/images/Logo-research.png" width="10" alt="" /> <a href="{{ "/" | absolute_url | append: "research"}}">Research</a></p>
         <p><img src="/images/Logo-publi.png" width="10" alt="" /> <a href="{{ "/" | absolute_url | append: "publications" }}">Publications</a></p>
-        <p><a href="{{ "/" | absolute_url | append: "code"}}">Code</a></p>
+        <p><img src="/images/Logo-code.png" width="10" alt="" /> <a href="{{ "/" | absolute_url | append: "code"}}">Code</a></p>
         <p><img src="/images/Researcher.png" width="10" alt="" /> <a href="{{ "/" | absolute_url | append: "about"}}">About</a></p>
 
         {% if site.show_downloads %}
