--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,6 +29,7 @@
         <p><a href="{{ "/" | absolute_url | append: "publications" }}">Publications</a></p>
         <p><a href="{{ "/" | absolute_url | append: "code"}}">Code</a></p>
         <p><a href="{{ "/" | absolute_url | append: "about"}}">About</a></p>
+        <p><a href="{{ "/" | absolute_url | append: "social"}}">Social Media</a></p>
 
         {% if site.show_downloads %}
         <ul class="downloads">
