--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,7 +41,7 @@
       </header>
       <section>
         {{ content }}
-
+        <img src="{{/images/gmaillogo.jpg | mailto:pbaduel@biologie.ens.fr}}" width="27" height="27" alt="email" />
       </section>
       <footer>
         {% if site.github.is_project_page %}
