--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,10 +26,10 @@
         {% endif %}
 
         <p><a style="color:#000033"; href="{{ "/" | absolute_url | append: "research"}}">Research</a></p>
-        <p><a href="{{ "/" | absolute_url | append: "publications" }}">Publications</a></p>
-        <p><a href="{{ "/" | absolute_url | append: "code"}}">Code</a></p>
-        <p><a href="{{ "/" | absolute_url | append: "about"}}">About</a></p>
-        <p><a href="{{ "/" | absolute_url | append: "social"}}">Social</a></p>
+        <p><a style="color:#000033"; href="{{ "/" | absolute_url | append: "publications" }}">Publications</a></p>
+        <p><a style="color:#000033"; href="{{ "/" | absolute_url | append: "code"}}">Code</a></p>
+        <p><a style="color:#000033"; href="{{ "/" | absolute_url | append: "about"}}">About</a></p>
+        <p><a style="color:#000033"; href="{{ "/" | absolute_url | append: "social"}}">Social</a></p>
 
         {% if site.show_downloads %}
         <ul class="downloads">
