--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
       <header>
         
         {% if site.logo %}
-          <img src="{{site.logo | relative_url}}" width="166.5" height="195" alt="Logo" />
+          <img src="{{site.logo | relative_url}}" width="200" alt="Logo" />
         {% endif %}
         
         <h1><a style="color:#000033"; href="{{ "/" | absolute_url | append: "about" }}">{{ site.title | default: site.github.repository_name }}</a></h1>
