--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
           <img src="{{site.logo | relative_url}}" width="225" alt="Logo" />
         {% endif %}
         
-        <h1><a style="color:#000033"; href="{{ "/" | absolute_url | append: "about" }}">{{ site.title | default: site.github.repository_name }}</a></h1>
+        <h1><a style="color:#000033"; href="{{ "/" | absolute_url | append: "research" }}">{{ site.title | default: site.github.repository_name }}</a></h1>
         
         <p>{{ site.description | default: site.github.project_tagline }}</p>        
                 
