--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
         
         <p>{{ site.description | default: site.github.project_tagline }}</p>        
                 
-        <p><a style="color:#000033"; href="{{ "/" | absolute_url | append: "research"}}">Research</a></p>
+        <p><a style="color:#000033"; href="{{ "/" | absolute_url | append: "🔬 research"}}">Research</a></p>
         <p><a style="color:#000033"; href="{{ "/" | absolute_url | append: "publications" }}">Publications</a></p>
         <p><a style="color:#000033"; href="{{ "/" | absolute_url | append: "code"}}">Code</a></p>
         <p><a style="color:#000033"; href="{{ "/" | absolute_url | append: "about"}}">About</a></p>
